--- a/pages/colaboradores.html
+++ b/pages/colaboradores.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Colaboradores</title>
 </head>
 <body>
   <h1>Colaboradores</h1>
+  <footer>
+    <img src="./images/logoAlura.png" alt="logo Alura">
+    <img src="./images/suzano-logo-border-radius.png" alt="logo Suzano">
+    <img src="./images/Logo_Include_Branco.svg" alt="logo Include">
+  </footer>
 </body>
 </html>
