--- a/index.html
+++ b/index.html
@@ -4,20 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <!-- ESTILOS -->
   <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/variaveis.css">
   <link rel="stylesheet" href="./css/style.css">
+
+  <!-- FONTES -->
+  <link href="https://fonts.googleapis.com/css2family=Gemunu+Libre&display=swap" rel="stylesheet">
   <title>Projeto Alura Suzano Homenagem</title>
 </head>
 <body>
-  <div class="menu">
+  <aside class="menu">
+    <h2>Menu</h2>
+    
+    <img src="images/logoTransCode.png" class="logoTransCode" />
+    
     <nav>
       <ul>
-        <li> <a href="index.html">inicio</a></li>
+        <li> <a href="index.html">home</a></li>
         <li> <a href="./pages/pagina.html">pagina</a></li>
         <li><a href="./pages/colaboradores.html">colaboradores</a></li>
       </ul>
     </nav>
-  </div>
+
+    <div class="logos">
+      <img src="images/logoSuzano.png" alt="" class="logoSuzano">
+      <img src="images/logoAluraBranco.png" alt="" class="logoAlura">
+    </div>
+  </aside>
   
   <main>
     <div class="principal">
