Distância menu, main

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <aside class="menu">
     <h2>Menu</h2>
     
-    <img src="images/logoTransCode.png" class="logoTransCode" />
+    <img src="./images/logoTransCode.png" class="logoTransCode" />
     
     <nav>
       <ul>
