--- a/index.html
+++ b/index.html
@@ -32,75 +32,18 @@
       <img src="images/logoAluraBranco.png" alt="" class="logoAlura">
     </div>
   </aside>
+
+  <div class="bandeiraLateral"></div>
   
   <main>
     <div class="principal">
-      <h1>Importância de Projetos em Prol da comunidade Trans</h1>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p> 
-      
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p> 
-      
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. At, obcaecati asperiores cupiditate natus doloremque rem esse vitae magni amet, pariatur quod provident necessitatibus beatae sequi maxime? Corporis voluptas adipisci iusto.
-
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae assumenda nobis optio sunt consequuntur cum repellendus eos sit accusantium, deleniti autem asperiores qui quod alias dolore repudiandae? Qui, adipisci?
-      </p>
+      <h1 class="tituloQuemSomos">Quem Somos</h1>
+        <div class="video"></div>
+        <p class="textoQuemSomos">
+          NÓS SOMOS PEQUENOS CAMPANOSES SEDENTOS PARA FAZER UM BOM SITE, MAS
+          INFELIZMENTE NÃO ESTÁ FICANDO BONITO =/ MAS ESTÁ INDO, SÓ FALTOU UM
+          PIX DE 50 REAIS PARA CRIAR UM ANIMO! ♥ CORAÇÃOZINHOS RS
+        </p>
     </div>
   </main>
 
