alinhando os textos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
   <main>
       <div class="principal">
-        <h1 class="tituloQuemSomos">Quem Somos</h1>
+        <h1 class="tituloQuemSomos">.Quem Somos {</h1>
           <div class="video">
             <iframe width="539" height="369" src="https://www.youtube.com/embed/gTmKY2AlXAE"
             title="DESIGN INTO CODE #2 | HTML / CSS Coding Time Lapse | CSS Switch animation" frameborder="0"
@@ -49,7 +49,8 @@
             INFELIZMENTE NÃO ESTÁ FICANDO BONITO =/ MAS ESTÁ INDO, SÓ FALTOU UM
             PIX DE 50 REAIS PARA CRIAR UM ANIMO! ♥ CORAÇÃOZINHOS RS
           </p>
-      </div>
+          <p><span class="chaves">}</span></p>
+        </div>
   </section>
   </main>
 
