--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       </nav>
   
       <div class="logos">
-        <img src="images/logoSuzano.png" alt="" class="logoSuzano">
-        <img src="images/logoAluraBranco.png" alt="" class="logoAlura">
+        <img src="./images/logoSuzano.png" alt="" class="logoSuzano">
+        <img src="./images/logoAluraBranco.png" alt="" class="logoAlura">
       </div>
     </aside>
 
-  <div class="bandeiraLateral"></div>
+    <div class="bandeiraLateral"></div>
   
-  <main>
+    <main>
       <div class="principal">
         <h1 class="tituloQuemSomos">.Quem Somos {</h1>
           <div class="video">
@@ -50,9 +50,9 @@
             PIX DE 50 REAIS PARA CRIAR UM ANIMO! ♥ CORAÇÃOZINHOS RS
           </p>
           <p><span class="chaves">}</span></p>
-        </div>
+      </div>
+    </main>
   </section>
-  </main>
 
   
 </body>
