mexendo na disposição da pagina e das logos

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <nav>
         <ul>
           <li> <a href="index.html">home</a></li>
-          <li> <a href="./pages/pagina.html">pagina</a></li>
+          <li> <a href="#">Referências</a></li>
           <li><a href="./pages/colaboradores.html">colaboradores</a></li>
         </ul>
       </nav>
   
       <div class="logos">
-        <img src="./images/logoSuzano.png" alt="" class="logoSuzano">
-        <img src="./images/logoAluraBranco.png" alt="" class="logoAlura">
+        <img src="./images/logoSuzano.png" alt=" Logo Suzano" class="logoSuzano">
+        <img src="./images/logoAluraBranco.png" alt=" Logo Alura Includ" class="logoAlura">
       </div>
     </aside>
 
