atualização da pagina

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           
       <img src="./images/logoTransCode.png" class="logoTransCode" />
       
-      <nav>
-        <ul>
-          <li> <a href="index.html">home</a></li>
-          <li> <a href="#">Referências</a></li>
-          <li><a href="./pages/colaboradores.html">colaboradores</a></li>
+      <nav class="navegacao">
+        <ul class="navegacaoLista">
+          <li > <a href="index.html" class="navegacaoLinks">home</a></li>
+          <li> <a href="#" class="navegacaoLinks">Referências</a></li>
+          <li><a href="./pages/colaboradores.html" class="navegacaoLinks">colaboradores</a></li>
         </ul>
       </nav>
   
