add os vetores ao lado do video

--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
       <section class="principal">
         <div class="principalConteudo">
           <h1 class="tituloQuemSomos">.Quem Somos {</h1>
-          <div class="video">
-            <iframe width="539" height="369" src="https://www.youtube.com/embed/gTmKY2AlXAE"
-            title="DESIGN INTO CODE #2 | HTML / CSS Coding Time Lapse | CSS Switch animation" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+          <div class="videoSection">
+            <img src="./images/vectorEsquerdo.png" alt="vectorEsquerdo" class="vetores">
+            <div class="video">
+              <iframe width="539" height="369" src="https://www.youtube.com/embed/gTmKY2AlXAE"
+              title="DESIGN INTO CODE #2 | HTML / CSS Coding Time Lapse | CSS Switch animation" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+            </div>            
+            <img src="./images/barraInclinada.png" alt="barraInclinada" class="vetores">
+            <img src="./images/vectorDireito.png" alt="vectorDireito" class="vetores">
           </div>
           <p class="textoQuemSomos">
             NÓS SOMOS PEQUENOS CAMPONESES SEDENTOS PARA FAZER UM BOM SITE, MAS
