criando Segunda section

--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@
           <p class="chaves">}</p>
         </div>
       </section>
+      
+      <section class="SegundoConteudo">
+        <section class="principalConteudo">
+          <div class="imagemFundoSection2">
+            <img src="./images/rectangleRosa.png" alt="fundo rosa">
+            <img src="./images/rectangleAzul.png" alt="fundo Azul">
+          </div>
+        </section>
+      </section>
+      
     </main>
   </section>
-  
-</body>
-</html>
+    </body>
+    </html>
