--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="./images/vectorEsquerdo.png" alt="vectorEsquerdo" class="vetores">
             <img src="./images/barraInclinada.png" alt="barraInclinada" class="vetores">
             <div class="video">
-              <iframe width="439" height="269" src="https://www.youtube.com/embed/gTmKY2AlXAE"
+              <iframe class="videoTamanho" width="100%" height="269" src="https://www.youtube.com/embed/gTmKY2AlXAE"
               title="DESIGN INTO CODE #2 | HTML / CSS Coding Time Lapse | CSS Switch animation" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
