--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul class="navegacaoLista">
               <li><a href="index.html" class="navegacaoLinks">home</a></li>
               <li>
-                <a href="./pages/colaboradores.html" class="navegacaoLinks"
+                <a href="colaboradores.html" class="navegacaoLinks"
                   >colaboradores</a
                 >
               </li>
