ajustando as paginas

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/variaveis.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/colaboradores.css" />
 
     <!-- FONTES -->
     <link
@@ -55,6 +56,7 @@
       <main>
         <section class="principal">
           <div class="principalConteudo">
+            <h1 class="tituloColaboradores">Portfólios</h1>
 
           </div>
         </section>
