--- a/colaboradores.html
+++ b/colaboradores.html
@@ -18,49 +18,37 @@
     <title>Projeto Alura Suzano Homenagem</title>
   </head>
   <body>
+    <section class="containerConteudo">
     <section class="paginaPrincipal">
       <aside class="menu">
         <section class="menuSection">
-          <img
-            src="./images/logoTransCode.png"
-            class="logoTransCode"
-            alt="Logo TransCode"
-          />
+          <img src="./images/logoTransCode.png" class="logoTransCode" alt="Logo TransCode" />
 
           <nav class="navegacao">
             <ul class="navegacaoLista">
               <li><a href="index.html" class="navegacaoLinks">home</a></li>
               <li>
-                <a href="colaboradores.html" class="navegacaoLinks"
-                  >colaboradores</a
-                >
+                <a href="colaboradores.html" class="navegacaoLinks">colaboradores</a>
               </li>
             </ul>
           </nav>
 
           <div class="logos">
-            <img
-              src="./images/logoSuzano.png"
-              alt=" Logo Suzano"
-              class="logoSuzano"
-            />
-            <img
-              src="./images/logoAluraBranco.png"
-              alt=" Logo Alura Include"
-              class="logoAlura"
-            />
+            <img src="./images/logoSuzano.png" alt=" Logo Suzano" class="logoSuzano" />
+            <img src="./images/logoAluraBranco.png" alt=" Logo Alura Include" class="logoAlura" />
           </div>
         </section>
       </aside>
 
       <main>
-        <section class="principal">
-          <div class="principalConteudo">
+        <section class="conteudoColaboradores">
+          <div class="">
             <h1 class="tituloColaboradores">Portfólios</h1>
 
           </div>
         </section>
-      </main>  
-    </section>    
+      </main>
+    </section>
+  </section>
   </body>
 </html>
