--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   <body>
     <section class="paginaPrincipal">
       <aside class="menu">
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
         <section class="menuSection">
           <img
             src="./images/logoTransCode.png"
@@ -57,9 +62,7 @@
           <div class="principalConteudo">
             <h1 class="tituloQuemSomos">.Quem Somos {</h1>
             <p class="textoQuemSomos">
-              NÓS SOMOS PEQUENOS CAMPONESES SEDENTOS PARA FAZER UM BOM SITE, MAS
-              INFELIZMENTE NÃO ESTÁ FICANDO BONITO =/ MAS ESTÁ INDO, SÓ FALTOU
-              UM PIX DE 50 REAIS PARA CRIAR UM ANIMO! ♥ CORAÇÃOZINHOS RS
+             A transCode é formada por pessoas transgêneros e transsexuais que receberam uma bolsa de estudos para Lógica de Programação e Direcionamento para Python da Suzano em parceria com a Alura. Diante disso, decidimos desenvolver este site para mostrar um pouco do que aprendemos ao longo do curso e agradecer em nome de nossa comunidade trans essa grande iniciativa que nos possibilita a inclusão no mercado de trabalho e o desenvolvimento profissional em tecnologia.
             </p>
             <div class="videoSection">
               <img
@@ -131,5 +134,6 @@
         </section>
       </main>
     </section>
+        <script src="script.js"></script>
   </body>
 </html>
