--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/variaveis.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/menu.css" />
+    <link rel="stylesheet" href="./css/pagina-principal.css" />
+    <link rel="stylesheet" href="./css/segundo-conteudo.css" />
+
 
     <!-- FONTES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2family=Gemunu+Libre&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    
     <title>Projeto Alura Suzano Homenagem</title>
   </head>
   <body>
