--- a/index.html
+++ b/index.html
@@ -12,135 +12,159 @@
     <link rel="stylesheet" href="./css/pagina-principal.css" />
     <link rel="stylesheet" href="./css/segundo-conteudo.css" />
 
-
-    <!-- FONTES -->
+    <!-- fonte  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    
+
     <title>Projeto Alura Suzano Homenagem</title>
   </head>
+
   <body>
-    <section class="paginaPrincipal">
-      <aside class="menu">
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-        <section class="menuSection">
+    <aside class="menu">
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <section class="menuSection">
+        <img
+          src="./images/logoTransCode.png"
+          class="logoTransCode"
+          alt="Logo TransCode"
+        />
+
+        <nav class="navegacao">
+          <ul class="navegacaoLista">
+            <li><a href="index.html" class="navegacaoLinks">home</a></li>
+            <li>
+              <a href="colaboradores.html" class="navegacaoLinks"
+                >colaboradores</a
+              >
+            </li>
+          </ul>
+        </nav>
+
+        <div class="logos">
           <img
-            src="./images/logoTransCode.png"
-            class="logoTransCode"
-            alt="Logo TransCode"
+            src="./images/logoSuzano.png"
+            alt=" Logo Suzano"
+            class="logoSuzano"
           />
+          <img
+            src="./images/logoAluraBranco.png"
+            alt=" Logo Alura Include"
+            class="logoAlura"
+          />
+        </div>
+      </section>
+    </aside>
 
-          <nav class="navegacao">
-            <ul class="navegacaoLista">
-              <li><a href="index.html" class="navegacaoLinks">home</a></li>
-              <li>
-                <a href="colaboradores.html" class="navegacaoLinks"
-                  >colaboradores</a
-                >
-              </li>
-            </ul>
-          </nav>
+    <div class="paginas">
+      <div class="divisaoPaginaPrincipal">
+      <div class="baseMenu"></div>
 
-          <div class="logos">
-            <img
-              src="./images/logoSuzano.png"
-              alt=" Logo Suzano"
-              class="logoSuzano"
-            />
-            <img
-              src="./images/logoAluraBranco.png"
-              alt=" Logo Alura Include"
-              class="logoAlura"
-            />
-          </div>
-        </section>
-      </aside>
+      <main class="paginaPrincipal">
+        <!-- ❗❗❗ POSSO DAR UM PITACO NO DESIGN, NESSA PARTE? ACHO QUE AQUI FICARIA MUITO LEGAL FAZER NA SINTAXE DE OBJETO DE PROGRAMAÇÃO, QUE DESCREVERIA O TRANSCODE!💗 -->
+        <div class="paginaPrincipalTopo">
+          <!-- ❗❗❗ TROCAR {} POR svg -->
+          <h1 class="tituloPrincipal">
+            .Quem Somos
+            <img src="./images/chaves-1.svg" alt="Chaves {" class="chaves" />
+          </h1>
+        </div>
 
-      <main>
-        <section class="principal">
-          <div class="principalConteudo">
-            <h1 class="tituloQuemSomos">.Quem Somos {</h1>
-            <p class="textoQuemSomos">
-             A transCode é formada por pessoas transgêneros e transsexuais que receberam uma bolsa de estudos para Lógica de Programação e Direcionamento para Python da Suzano em parceria com a Alura. Diante disso, decidimos desenvolver este site para mostrar um pouco do que aprendemos ao longo do curso e agradecer em nome de nossa comunidade trans essa grande iniciativa que nos possibilita a inclusão no mercado de trabalho e o desenvolvimento profissional em tecnologia.
-            </p>
-            <div class="videoSection">
-              <img
-                src="./images/vectorEsquerdo.png"
-                alt="vectorEsquerdo"
-                class="vetores"
-              />
-              <img
-                src="./images/barraInclinada.png"
-                alt="barraInclinada"
-                class="vetores"
-              />
-              <div class="video">
-                <iframe
-                  class="videoTamanho"
-                  width="100%"
-                  height="100%"
-                  src="https://www.youtube.com/embed/gTmKY2AlXAE"
-                  title="DESIGN INTO CODE #2 | HTML / CSS Coding Time Lapse | CSS Switch animation"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                ></iframe>
-              </div>
-
-              <img
-                src="./images/vectorDireito.png"
-                alt="vectorDireito"
-                class="vetores"
-              />
-            </div>
-
-            <p class="chaves">}</p>
-          </div>
-        </section>
-
-        <section class="SegundoConteudo">
-          <h2 class="titulo2">
-            Importância de projetos como a transformação digital
-          </h2>
-          <p class="texto2">
-            O projeto apresentado é para demonstrar as hard skills que
-            aprendemos no decorrer do curso proposto, onde a cooperação, empatia
-            e mentalidade de equipe, mostrou que podemos ir além, quando a
-            oportunidade de desenvolvimento é dada. "Nosso muito obrigado a
-            Suzano e Alura, pelo apoio dado a nossa comunidade."
+        <div class="paginaPrincipalTexto">
+          <p class="textoQuemSomos">
+            NÓS SOMOS PEQUENOS CAMPONESES SEDENTOS PARA FAZER UM BOM SITE,
+            MASINFELIZMENTE NÃO ESTÁ FICANDO BONITO =/ MAS ESTÁ INDO, SÓ FALTOU
+            UM PIX DE 50 REAIS PARA CRIAR UM ANIMO! ♥ CORAÇÃOZINHOS RS
           </p>
+        </div>
 
-          <h3 class="titulo3">Empregabilidade Trans</h3>
-          <p class="texto3">
-            Atualmente, conseguimos obter informações sobre gênero em poucos
-            cliques, mas, quando se trata de cotidiano e sociedade, a população
-            transgênero permanece invisível. O fato fica mais evidente quando
-            olhamos para última edição da PNS realizada pelo IBGE em parceria
-            com o ministério da saúde, onde a população transgênero não fora
-            incluída. O impacto de não ter políticas públicas suficientes para
-            possibilitar equidade, deixa a população transgênero à margem da
-            sociedade. Em consequência, a concorrência desleal no mercado de
-            trabalho, restando somente subempregos, o que torna impossível
-            sequer pensar em estudar. Projetos como o TRANSformação digital,
-            fazem muita diferença, pois, fornecem ferramentas adequadas, a
-            possibilidade de galgar um futuro melhor, uma posição de respeito no
-            mercado de trabalho e principalmente, a dignidade que qualquer ser
-            vivente tem direito.
-          </p>
-          <a class="linkTexto3" href="https://www.pns.icict.fiocruz.br/"
-            >(https://www.pns.icict.fiocruz.br/)</a
-          >
-        </section>
+        <div class="paginaPrincipalVideo">
+          <!-- ❗❗❗ MUDEI PRA SVG's!!! (ASSIM A QUALIDADE FICA MELHOR) -->
+          <img
+            src="./images/abreTag.svg"
+            alt="vectorEsquerdo"
+            class="vetores"
+          />
+          <img
+            src="./images/barraFechaTag.svg"
+            alt="barraInclinada"
+            class="vetores"
+          />
+          <div class="video">
+            <iframe
+              class="videoTamanho"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/gTmKY2AlXAE"
+              title="DESIGN INTO CODE #2 | HTML / CSS Coding Time Lapse | CSS Switch animation"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+
+          <img
+            src="./images/fechaTag.svg"
+            alt="vectorDireito"
+            class="vetores"
+          />
+        </div>
+
+        <div class="paginaPrincipalBottom">
+          <!-- ❗❗❗ TROCAR {} POR svg -->
+          <!-- <p class="chaves">}</p> -->
+          <img src="./images/chaves-2.svg" alt="Chaves }" class="chaves" />
+        </div>
       </main>
-    </section>
-        <script src="script.js"></script>
+      </div>
+
+      <section class="SegundoConteudo">
+      <div class="containerSegundoConteudo">
+        <h2 class="titulo2">
+          Importância de projetos como a transformação digital
+        </h2>
+        <p class="texto2">
+          O projeto apresentado é para demonstrar as hard skills que aprendemos
+          no decorrer do curso proposto, onde a cooperação, empatia e
+          mentalidade de equipe, mostrou que podemos ir além, quando a
+          oportunidade de desenvolvimento é dada.<br /><br />"Nosso muito
+          obrigado a Suzano e Alura, pelo apoio dado a nossa comunidade."
+        </p>
+
+        <h3 class="titulo3">Empregabilidade Trans</h3>
+        <p class="texto3">
+          Atualmente, conseguimos obter informações sobre gênero em poucos
+          cliques, mas, quando se trata de cotidiano e sociedade, a população
+          transgênero permanece invisível. O fato fica mais evidente quando
+          olhamos para última edição da PNS realizada pelo IBGE em parceria com
+          o ministério da saúde, onde a população transgênero não fora
+          incluída.<br />O impacto de não ter políticas públicas suficientes
+          para possibilitar equidade, deixa a população transgênero à margem da
+          sociedade. Em consequência, a concorrência desleal no mercado de
+          trabalho, restando somente subempregos, o que torna impossível sequer
+          pensar em estudar.<br />Projetos como o TRANSformação digital, fazem
+          muita diferença, pois, fornecem ferramentas adequadas, a possibilidade
+          de galgar um futuro melhor, uma posição de respeito no mercado de
+          trabalho e principalmente, a dignidade que qualquer ser vivente tem
+          direito.
+        </p>
+        <a
+          class="linkTexto3"
+          href="https://www.pns.icict.fiocruz.br/"
+          target="_blank"
+          >(https://www.pns.icict.fiocruz.br/)</a
+        >
+      </div>
+      </section>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
