--- a/colaboradores.html
+++ b/colaboradores.html
@@ -12,45 +12,70 @@
     <link rel="stylesheet" href="./css/pagina-principal.css" />
     <link rel="stylesheet" href="./css/colaboradores.css" />
 
-    <!-- FONTES -->
+    <!-- fonte  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2family=Gemunu+Libre&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+
     <title>Projeto Alura Suzano Homenagem</title>
   </head>
+
   <body>
-    <section class="containerConteudo">
-    <section class="paginaPrincipal">
-      <aside class="menu">
-        <section class="menuSection">
-          <img src="./images/logoTransCode.png" class="logoTransCode" alt="Logo TransCode" />
+    <aside class="menu">
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <section class="menuSection">
+        <img
+          src="./images/logoTransCode.png"
+          class="logoTransCode"
+          alt="Logo TransCode"
+        />
 
-          <nav class="navegacao">
-            <ul class="navegacaoLista">
-              <li><a href="index.html" class="navegacaoLinks">home</a></li>
-              <li>
-                <a href="colaboradores.html" class="navegacaoLinks">colaboradores</a>
-              </li>
-            </ul>
-          </nav>
+        <nav class="navegacao">
+          <ul class="navegacaoLista">
+            <li><a href="index.html" class="navegacaoLinks">home</a></li>
+            <li>
+              <a href="colaboradores.html" class="navegacaoLinks"
+                >colaboradores</a
+              >
+            </li>
+          </ul>
+        </nav>
 
-          <div class="logos">
-            <img src="./images/logoSuzano.png" alt=" Logo Suzano" class="logoSuzano" />
-            <img src="./images/logoAluraBranco.png" alt=" Logo Alura Include" class="logoAlura" />
-          </div>
-        </section>
-      </aside>
+        <div class="logos">
+          <img
+            src="./images/logoSuzano.png"
+            alt=" Logo Suzano"
+            class="logoSuzano"
+          />
+          <img
+            src="./images/logoAluraBranco.png"
+            alt=" Logo Alura Include"
+            class="logoAlura"
+          />
+        </div>
+      </section>
+    </aside>
 
-      <main>
-        <section class="conteudoColaboradores">
-          <div class="">
-            <h1 class="tituloColaboradores">Portfólios</h1>
+    <div class="paginas">
+      <div class="divisaoPaginaPrincipal">
+      <div class="baseMenu"></div>
 
-          </div>
-        </section>
-      </main>
-    </section>
-  </section>
+        <main class="paginaPrincipal">
+          <section class="conteudoColaboradores">
+            <div class="">
+              <h1 class="tituloColaboradores">Portfólios</h1>
+
+            </div>
+          </section>
+        </main>
+      </section>
+    </div>
   </body>
 </html>
