--- a/colaboradores.html
+++ b/colaboradores.html
@@ -67,9 +67,30 @@
       <div class="baseMenu"></div>
 
         <main class="paginaPrincipal">
+          <header class="">
+            <h1 class="tituloColaboradores">Portfólios</h1>
+          </header>
+          
           <section class="conteudoColaboradores">
-            <div class="">
-              <h1 class="tituloColaboradores">Portfólios</h1>
+            <div class="cardsConjunto">
+              <div class="cards">Ayla</div>
+              <div class="cards">Elizabeth</div>
+              <div class="cards">Noah</div>
+            </div>
+            <div class="cardsConjunto">
+              <div class="cards">oliver</div>
+              <div class="cards">Klaus</div>
+              <div class="cards">victor</div>
+            </div>
+            <div class="cardsConjunto">
+              <div class="cards"></div>
+              <div class="cards"></div>
+              <div class="cards"></div>
+            </div>
+            <div class="cardsConjunto">
+              <div class="cards"></div>
+              <div class="cards"></div>
+              <div class="cards"></div>
             </div>
           </section>
         </main>
