criação do css cardsColaboladores

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/menu.css" />    
     <link rel="stylesheet" href="./css/colaboradores.css" />
+    <link rel="stylesheet" href="./css/cardsColaboradores.css" />    
 
     <!-- fonte  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -73,24 +74,56 @@
           
           <section class="conteudoColaboradores">
             <div class="cardsConjunto">
-              <div class="cards">Ayla</div>
-              <div class="cards">Elizabeth</div>
-              <div class="cards">Noah</div>
+
+              <div class="cards">
+                <div class="ayla"> Ayla </div>
+              </div>
+
+              <div class="cards">
+                <div class="elizabeth">  Elizabeth </div>
+              </div>
+
+              <div class="cards">
+                <div class="noah">  Noah </div>
+              </div>
+
+            </div>
+
+            <div class="cardsConjunto">
+
+              <div class="cards">
+                <div class="oliver"> oliver </div>
+              </div>
+
+              <div class="cards">
+                <div class="klaus"> Klaus </div>
+              </div>
+
+              <div class="cards">
+                <div class="victor"> victor </div>
+              </div>
+
+            </div>
+
+            <div class="cardsConjunto">
+              <div class="cards">
+                <div></div>
+              </div>
+              <div class="cards">
+                <div></div>
+              </div>
+              <div class="cards">
+                <div></div>
+              </div>
             </div>
             <div class="cardsConjunto">
-              <div class="cards">oliver</div>
-              <div class="cards">Klaus</div>
-              <div class="cards">victor</div>
-            </div>
-            <div class="cardsConjunto">
-              <div class="cards"></div>
-              <div class="cards"></div>
-              <div class="cards"></div>
-            </div>
-            <div class="cardsConjunto">
-              <div class="cards"></div>
-              <div class="cards"></div>
-              <div class="cards"></div>
+              <div class="cards">
+                <div></div>
+              </div><div class="cards">
+                <div></div>
+              </div><div class="cards">
+                <div></div>
+              </div>
             </div>
           </section>
         </main>
