--- a/colaboradores.html
+++ b/colaboradores.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/menu.css" />    
     <link rel="stylesheet" href="./css/colaboradores.css" />
-    <link rel="stylesheet" href="./css/cardsColaboradores.css" />    
+    <link rel="stylesheet" href="./css/cardsColaboradores.css" /> 
+    <link rel="stylesheet" href="./css/responsivo.css" />
+
 
     <!-- fonte  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
