--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/menu.css" />
     <link rel="stylesheet" href="./css/pagina-principal.css" />
     <link rel="stylesheet" href="./css/segundo-conteudo.css" />
+    <link rel="stylesheet" href="./css/responsivo.css">
 
     <!-- fonte  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
