--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
 
         <div class="paginaPrincipalTexto">
           <p class="textoQuemSomos">
-            NÓS SOMOS PEQUENOS CAMPONESES SEDENTOS PARA FAZER UM BOM SITE,
-            MASINFELIZMENTE NÃO ESTÁ FICANDO BONITO =/ MAS ESTÁ INDO, SÓ FALTOU
-            UM PIX DE 50 REAIS PARA CRIAR UM ANIMO! ♥ CORAÇÃOZINHOS RS
+            A transcode é formada por pessoas transgêneros e transsexuais que receberam uma bolsa de estudos para Lógica de Programação e Direcionamento para Python da Suzano em parceria com a Alura. Diante disso, decidimos desenvolver este site para mostrar um pouco do que aprendemos ao longo do curso e agradecer em nome de nossa comunidade trans essa grande iniciativa que nos possibilita a inclusão no mercado de trabalho e o desenvolvimento profissional em tecnologia.
           </p>
         </div>
 
