--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="paginaPrincipalTopo">
 
           <div class="hamburger">
-            <img src="images/hamburger.svg" alt="bars">
+            <img src="images/hamburger.svg" alt="bars"  class="hamburgerIcone">
             <!-- <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span> -->
@@ -103,11 +103,10 @@
             alt="barraInclinada"
             class="vetores"
           />
-          <div class="video">
+          <div class="videoTamanho">
             <iframe
-              class="videoTamanho"
-              width="560"
-              height="315"
+              width="100%"
+              height="100%"
               src="https://www.youtube.com/embed/gTmKY2AlXAE"
               title="DESIGN INTO CODE #2 | HTML / CSS Coding Time Lapse | CSS Switch animation"
               frameborder="0"
