menu pagina colaboladores

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -69,10 +69,10 @@
 
           
           <div class="hamburger">
-            <img src="images/hamburger.svg" alt="bars">
-              <!-- <span class="bar"></span>
-              <span class="bar"></span>
-              <span class="bar"></span> -->
+            <img src="images/hamburger.svg" alt="bars"  class="hamburgerIcone">
+            <!-- <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span> -->
           </div>
           
           <header class="">
