add nov os cards

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -101,17 +101,19 @@
               <div class="cards">
                 <div class="klaus"> Klaus </div>
               </div>
+              
+              <div class="cards">
+                <div class="nicolas"> nicolas </div>
+              </div>
 
               <div class="cards">
                 <div class="victor"> victor </div>
               </div>
 
               <div class="cards">
-                <div></div>
+                <div class="kiu"> kiu </div>
               </div>
-              <div class="cards">
-                <div></div>
-              </div>
+              
               <div class="cards">
                 <div></div>
               </div>
