começando a produzir os cards Klaus

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -99,7 +99,37 @@
               </div>
 
               <div class="cards">
-                <div class="klaus"> Klaus </div>
+                <div class="klaus"> 
+                  <img                            
+                     src="https://avatars.githubusercontent.com/u/67723423?v=4" 
+                     alt="avatar"> 
+                  <h2>Klaus Raphael Machado</h2>
+                  <p>Front-end developer</p>
+                  <ul class="social-icons">
+                    <li>
+                      <a href="https://mailto:klausmachado1@gmail.com" target="_blank">
+                        <img 
+                          src="https://cdn-icons-png.flaticon.com/512/3178/3178165.png" 
+                          alt="email" >
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.linkedin.com/in/klaus-machado-de-farias-149964207/" 
+                        target="_blank" >
+                        <img 
+                          src="https://cdn-icons-png.flaticon.com/512/665/665212.png" 
+                          alt="fa-linkedin">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/KlausMachado" 
+                        target="_blank">
+                        <img 
+                          src="https://cdn-icons-png.flaticon.com/512/1051/1051377.png" 
+                          alt="fa-github" >
+                      </a>
+                    </li>
+                  </ul> </div>
               </div>
               
               <div class="cards">
