--- a/colaboradores.html
+++ b/colaboradores.html
@@ -22,6 +22,9 @@
       rel="stylesheet"
     />
 
+  <!-- ICONS -->
+  <script src="https://kit.fontawesome.com/c45cb14264.js" crossorigin="anonymous"></script>
+
     <title>Projeto Alura Suzano Homenagem</title>
   </head>
 
@@ -94,9 +97,48 @@
                 <div class="noah">  Noah </div>
               </div>                      
 
-              <div class="cards">
-                <div class="oliver"> oliver </div>
+<div class="cards cardsOliver">
+              <div class="oliver">
+                <div class="oliverCardFrente">
+                  <i class="fa-solid fa-laptop-code">
+                    <p>.oliwer</p>
+
+                    <p class="oliverCardHover">coloque o mouse sobre o card</p>
+                  </i>
+                </div>
+
+                <div class="oliverCardCostas">
+                  <div class="cardCostasTop">
+                    <img
+                      src="https://media-exp1.licdn.com/dms/image/C4D03AQEB6LE7cG_-Cg/profile-displayphoto-shrink_200_200/0/1668028373538?e=1675296000&v=beta&t=5g2rddudOtcil9qUvPyxlJkZuc5EybGEY7GfItBIaJY"
+                      alt="" class="imgCardOliver">
+  
+                    <p class="nomeOliver profileOliver">Oliver Benites</p>
+                  </div>
+                  
+                  <p class="aboutOliver">
+                    Estudante e amante de tecnologia e programação.
+                  </p>
+                  <br>
+                  <p class="aboutOliver citacao">
+                    O tempo é teu capital; tens de o saber utilizar. Perder tempo é estragar a vida.
+                    - Franz Kafka
+                  </p>
+
+                  <div class="cardCostasBottom">
+                    <a href="https://github.com/olwr" target="_blank" class="iconsOliver">
+                      <i class="fa-brands fa-square-github fa-sm fa-beat-fade"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/oliwerb/" target="_blank" class="iconsOliver">
+                      <i class="fa-brands fa-linkedin fa-sm fa-beat-fade"></i>
+                    </a>
+                    <a href="mailto:benites.olvr@gmail.com" target="_blank" class="iconsOliver">
+                      <i class="fa-solid fa-inbox fa-sm fa-beat-fade"></i>
+                    </a>
+                  </div>  
+                </div>
               </div>
+            </div>
 
               <div class="cards">
                 <div class="klaus"> 
